2019-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (TraceArcPath): Substitute a lineto command when
	tracing arc is impossible.  Fixes oss-fuzz 10765
	"graphicsmagick/coder_MVG_fuzzer: Divide-by-zero in TraceArcPath".

2019-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_read_raw_profile): Fix validation of raw
	profile length.  Fixes oss-fuzz 16906
	"graphicsmagick:coder_ICO_fuzzer: Out-of-memory in
	graphicsmagick_coder_ICO_fuzzer".

	* coders/wpg.c (ReallocColormap): Avoid dereferencing a null
	pointer if image->colormap is null.  Fixes oss-fuzz 17004
	"graphicsmagick:coder_WPG_fuzzer: Null-dereference READ in
	ReallocColormap".

2019-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.c (MagickRealloc): Add a note that the behavior of
	this function is as described for BSD reallocf(3), which is now
	appearing in Linux's GNU libc and elsewhere.

2019-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Document the significant OpenMP speed-up which
	may be obtained by using an alternate memory allocation library.
	Currently 'tcmalloc', 'mtmalloc', and 'umem' are supported as
	options.

	* www/INSTALL-unix.rst: Document new --with-tcmalloc option to
	enable using Google gperftools tcmalloc library.

	* configure.ac: Add support for using Google gperftools tcmalloc
	library via the --with-tcmalloc option.

	* scripts/rst2htmldeco.py: Port to Python 3 syntax and require at
	least Python 2.6.

	* scripts/relpath.py: Port to Python 3 syntax and require
	at least Python 2.6.

	* scripts/html_fragments.py: Port to Python 3 syntax and require
	at least Python 2.6.

	* scripts/format_c_api_doc.py: Port to Python 3 syntax and require
	at least Python 2.6.

2019-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/GraphicsMagick.imdoc: Document gm utility exit status codes.

2019-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
