@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190915"
-#define public MagickPackageReleaseDate "snapshot-20190915"
+#define public MagickPackageVersionAddendum ".020190916"
+#define public MagickPackageReleaseDate "snapshot-20190916"
