@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x232001
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 23,20,1
-#define MagickChangeDate   "20190915"
-#define MagickReleaseDate  "snapshot-20190915"
+#define MagickChangeDate   "20190916"
+#define MagickReleaseDate  "snapshot-20190916"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
